syntax = "proto3";

// Package arrebato.topic.v1 provides domain models for topics.
package arrebato.topic.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/topic/v1;topic";

// The Topic message describes a single topic within the cluster.
message Topic {
  // The name of the topic.
  string name = 1;
  // The amount of time a message will exist on a topic until it is deleted.
  google.protobuf.Duration message_retention_period = 2;
  // The amount of time a consumer will exist on a topic without updating its index until it is deleted.
  google.protobuf.Duration consumer_retention_period = 3;
  // Determines whether or not unverified messages are rejected for this topic.
  bool require_verified_messages = 4;
  // The number of partitions the topic should have.
  uint32 partitions = 5;
}
